--- a/src/components/scss/_navBar.scss
+++ b/src/components/scss/_navBar.scss
@@ -4,8 +4,10 @@ h4 {
     }
 
 #prof-pic{
-    vertical-align: middle;
-    width: 50px;
-    height: auto;
-    border-radius: 50%;
+    width: 4em;
+  height: 4em;
+  border-radius: 50%;
+
+  object-fit: cover;
+  object-position: center right;
 }
