Swipe added, working on new solution

--- a/src/components/scss/_navBar.scss
+++ b/src/components/scss/_navBar.scss
@@ -1,6 +1,9 @@
-h4 {
+#navbar-container{
+
+a {
     font-family: "Gotham Book";
     color: white;
+    font-size: 24px;
 }
 
 #prof-pic{
@@ -11,3 +14,21 @@ h4 {
     object-position: center right;
 }
 
+#nav-brand{
+    width: 8em;
+    height: auto;
+}
+
+#nav-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#nav-right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+}
