--- a/src/components/scss/_navBar.scss
+++ b/src/components/scss/_navBar.scss
@@ -3,7 +3,7 @@
 a {
     font-family: "Gotham Book";
     color: white;
-    font-size: 24px;
+    font-size: 28px;
 }
 
 #prof-pic{
@@ -22,13 +22,13 @@ a {
 #nav-left {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    align-items: center;
 }
 
 #nav-right {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: baseline;
 }
 
 }
