--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,11 @@
   src: url("./fonts/gotham/GothamBook.ttf")
 }
 
+@font-face{
+  font-family: "Gotham Bold";
+  src: url("./fonts/gotham/Gotham\ Bold\ Regular.ttf")
+}
+
 body {
   background: radial-gradient(#2D2D2D, #0F0F0F);
   background-repeat: no-repeat;
