--- a/src/components/scss/_card.scss
+++ b/src/components/scss/_card.scss
@@ -10,9 +10,41 @@
     #media-img {
         width: auto;
         height: 75vh;
+        padding: 1em;
+    }
+    
+    #media-img-detail {
+        width: auto;
+        height: 75vh;
         object-fit: cover;
         object-position: center right;
+        opacity: 10%;
     }
+    p {
+        font-family: "Gotham Book";
+        color: white;
+        font-size: 24px;
+    }
+
+    #outline-button{
+        background-color: rgba($color: #000000, $alpha: 0);
+        border: white 5px solid;
+        font-family: "Gotham Bold";
+        color: white;
+        font-size: 24px;
+        border-radius: 8px;
+    }
+    
+    #white-fill-button{
+        background-color: rgba($color: #ffffff, $alpha: 1);
+        border: white;
+        font-family: "Gotham Bold";
+        color: rgb(0, 0, 0);
+        font-size: 28px;
+        border-radius: 8px;
+        padding: 0 0.7em;
+    }
+
     #card-detail-button {
         display: flex;
         flex-direction: column;
@@ -21,5 +53,19 @@
     #card-detail-button-text {
         margin-bottom: -0.5em;
         margin-top: 0.8em;
+    }
+
+    #media-descrip {
+        position: absolute;
+        top: 8px;
+        left: 16px;
+        padding: 1em;
+    }
+    
+    #preview {
+        position: absolute;
+        bottom: 8px;
+        right: 16px;
+        padding: 1em;
     }
 }
