groups linked, a lot of stuff i forgot to commit

--- a/src/components/scss/_user.scss
+++ b/src/components/scss/_user.scss
@@ -4,3 +4,15 @@
     object-fit: cover;
     object-position: center right;
 }
+
+h2 {
+    font-family: "Gotham Book";
+    color: white;
+}
+
+
+.user-card{
+    display: flex;
+    flex-direction: row;
+    
+}
