more work, some of it works

--- a/src/components/scss/_card.scss
+++ b/src/components/scss/_card.scss
@@ -9,7 +9,7 @@
     }
     #media-img {
         width: auto;
-        height: 75vh;
+        height: 77vh;
     }
     
     #media-img-detail {
@@ -66,5 +66,9 @@
         bottom: 8px;
         right: 16px;
         padding: 1em;
+    }
+
+    .card-options{
+        padding: 2em ;
     }
 }
