login and register adds new object to fb

--- a/src/components/scss/_user.scss
+++ b/src/components/scss/_user.scss
@@ -11,8 +11,8 @@ h2 {
 }
 
 
-.user-card{
-    display: flex;
-    flex-direction: row;
+// .user-card{
+//     display: flex;
+//     flex-direction: row;
     
-}
+// }
