register does what I want it to do

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,11 @@
   src: url("./fonts/gotham/Gotham\ Bold\ Regular.ttf")
 }
 
+@font-face{
+  font-family: "Impact";
+  src: url("./fonts/gotham/Impact.ttf")
+}
+
 body {
   background: radial-gradient(#2D2D2D, #0F0F0F);
   background-repeat: no-repeat;
