--- a/src/components/scss/_card.scss
+++ b/src/components/scss/_card.scss
@@ -47,17 +47,17 @@
         color: rgb(0, 0, 0);
         font-size: 28px;
         border-radius: 8px;
-        padding: 0 0.7em;
+        padding: 0.2em 0.7em;
     }
     
     #yellow-fill-button{
-        background-color: #F5DE50;
+        background-color: #F5C518;
         border:#F5DE50;
-        font-family: "Gotham Bold";
+        font-family: "Impact";
         color: rgb(0, 0, 0);
         font-size: 28px;
         border-radius: 8px;
-        padding: 0 0.7em;
+        padding: 0.2em 0.7em;
     }
 
     #card-detail-button {
