user details and nav hooked up more reliably

--- a/src/components/scss/_card.scss
+++ b/src/components/scss/_card.scss
@@ -4,9 +4,15 @@
     align-items: center;
 
     h2 {
+        font-family: "Gotham Bold";
+        color: white;
+        font-size: 48px;
+    }
+    
+    h6 {
         font-family: "Gotham Book";
         color: white;
-
+        font-size: 36px;
     }
 
     a {
