--- a/src/components/scss/_login.scss
+++ b/src/components/scss/_login.scss
@@ -4,6 +4,9 @@
     background-color: #3f3f3f;
     border: none;
     padding: 1.5em;
+    ::placeholder {
+        color: white;
+    }
 }
 
 h4 {
@@ -26,4 +29,34 @@ h5 {
     background-color: #E50914;
     border: none;
     padding: 1em;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#login-brand {
+    margin: 6em 0 2em;
+    width: 20em;
+    height: auto;
+}
+
+p {
+    font-family: "Gotham Book";
+    color: white;
+    font-size: 24px;
+
+    a {
+        font-family: "Gotham Bold";
+        color: white;
+    }
+}
+
+.space-1 {
+    margin: 1em 0;
+}
+.space-2 {
+    margin: 2em 0;
 }
