--- a/src/components/scss/_group.scss
+++ b/src/components/scss/_group.scss
@@ -1,14 +1,13 @@
-#group-page {
-
-    h2 {
+h2 {
         font-family: "Gotham Bold";
         color: white;
         font-size: 48px;
+        padding: 0 0 0.5em 0;
     }
 
     h3 {
         font-family: "Gotham Book";
         color: white;
-        font-size: 36px;
+        font-size: 40px;
+        margin: 0.5em;
     }
-}
