--- a/src/components/scss/_navBar.scss
+++ b/src/components/scss/_navBar.scss
@@ -15,8 +15,18 @@ a {
 }
 
 #nav-brand{
-    width: 8em;
+    width: 5em;
     height: auto;
+}
+
+#nav-right {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    @media only screen and (max-width: 991px) {
+        display: inline;
+    }
 }
 
 }
