--- a/src/components/scss/friend.scss
+++ b/src/components/scss/friend.scss
@@ -67,3 +67,55 @@
         }
     }
 }
+ #friend-card{
+
+    h2 {
+        font-family: "Gotham Bold";
+        color: white;
+        font-size: 48px;
+        @media only screen and (max-width: 576px) {
+            font-family: "Gotham Bold";
+        color: white;
+        font-size: 30px;
+        }
+    }
+    
+    h3 {
+        font-family: "Gotham Book";
+        color: white;
+        font-size: 36px;
+        padding: 1em;
+        @media only screen and (max-width: 576px) {
+            font-family: "Gotham Book";
+        color: white;
+        font-size: 30px;
+        }
+    }
+    
+    h4 {
+        font-family: "Gotham Book";
+        color: white;
+        font-size: 40px;
+        padding: 0.5em 0 0 0;
+        @media only screen and (max-width: 576px) {
+            font-family: "Gotham Book";
+        color: white;
+        font-size: 30px;
+        }
+    }
+    h5 {
+        font-family: "Gotham Book";
+        color: white;
+        font-size: 48px;
+        @media only screen and (max-width: 576px) {
+            font-family: "Gotham Book";
+        color: white;
+        font-size: 24px;
+        }
+    }
+
+    .movie-column{
+        display: flex;
+        flex-flow: row wrap;
+}
+}
