--- a/src/components/scss/friend.scss
+++ b/src/components/scss/friend.scss
@@ -68,6 +68,33 @@
     }
 }
  #friend-card{
+     display: flex;
+     flex-flow: column;
+     margin: 0 5em;
+
+     .center {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+     }
+
+     .left-align {
+         margin: 1em 0 0 4em;
+     }
+     
+     .left-align-extra {
+         margin: 1em 0 0 4em;
+     }
+
+     #profile-info{
+         display: flex;
+         flex-flow: row wrap;
+         align-items: center;
+     }
+
+     #username{
+         margin-left: 1em;
+     }
 
     h2 {
         font-family: "Gotham Bold";
@@ -83,7 +110,7 @@
     h3 {
         font-family: "Gotham Book";
         color: white;
-        font-size: 36px;
+        font-size: 48px;
         padding: 1em;
         @media only screen and (max-width: 576px) {
             font-family: "Gotham Book";
@@ -95,7 +122,7 @@
     h4 {
         font-family: "Gotham Book";
         color: white;
-        font-size: 40px;
+        font-size: 32px;
         padding: 0.5em 0 0 0;
         @media only screen and (max-width: 576px) {
             font-family: "Gotham Book";
