more cleanup, add friend shows up when button pressed

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
 }
 
 body {
-  background: radial-gradient(#2D2D2D, #0F0F0F);
+  background: radial-gradient(#222222, #000000);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
