--- a/src/components/scss/friend.scss
+++ b/src/components/scss/friend.scss
@@ -59,6 +59,10 @@
     }
 
     #friend-pic  {
+        width: 8em;
+        height: 8em;
+        object-fit: cover;
+        object-position: center right;
         @media only screen and (max-width: 576px) {
         width: 4em;
         height: 4em;
