--- a/src/components/scss/_list.scss
+++ b/src/components/scss/_list.scss
@@ -9,6 +9,13 @@
         padding-left: 0.5em;
     }
 
+    #detail-icon {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
 
 
