--- a/src/components/scss/navBar.scss
+++ b/src/components/scss/navBar.scss
@@ -1,5 +1,7 @@
 #navbar-container{
 
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
+
 a {
     font-family: "Gotham Book";
     color: white;
