--- a/src/components/scss/_advanced.scss
+++ b/src/components/scss/_advanced.scss
@@ -76,10 +76,11 @@ h2 {
   border: none;
   color: #fff;
   font-size: 18px;
-  background-color: #9198e5;
+  background-color: #4E4D4F;
   transition: 200ms;
   margin: 0 10px;
-  font-weight: bolder;
+  font-family: "Gotham Bold";
+  font-size: 20px;
   width: 160px;
   box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.10);
 }
